RESOLVED FIXED64341
[Chromium] SVG text with y attribute set is not rendered with geometricPrecision
https://bugs.webkit.org/show_bug.cgi?id=64341
Summary [Chromium] SVG text with y attribute set is not rendered with geometricPrecision
Kenichi Ishibashi
Reported 2011-07-11 22:14:18 PDT
SVG text is not rendered sometimes with geometricPrecision. See http://crbug.com/87132 and http://crbug.com/87842.
Attachments
Patch V0 (15.02 KB, patch)
2011-07-11 22:57 PDT, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2011-07-11 22:57:00 PDT
Created attachment 100440 [details] Patch V0
Kenichi Ishibashi
Comment 2 2011-07-12 16:38:06 PDT
Comment on attachment 100440 [details] Patch V0 Clearing flags on attachment: 100440 Committed r90868: <http://trac.webkit.org/changeset/90868>
Kenichi Ishibashi
Comment 3 2011-07-12 16:38:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.